# homura

./: .README.md.swp  .gitignore  .homuracache_nyaa.si_gochiusa  .meson.build.swp  1  README  README.md  meson.build  meson_options.txt
automation_scripts/: download_example.py  requirements.txt
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  homura  out
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-projectinfo.json  intro-targets.json  meson-info.json
builddir/meson-logs/: meson-log.txt
builddir/meson-private/: coredata.dat.prev
include/: .errlib.h.swp  .homura.h.swp  .nyaasi_extractor.h.swp  .nyaasi_parser.h.swp  .select_ssl.h.swp  .torrent_parser.h.swp  .url_scheduler.h.swp  .url_table.h.swp  curl_container.h  errlib.h  homura.h  leveldb_container.h  magnet_info.h  magnet_table.h  nyaasi_extractor.h  nyaasi_parser.h  nyaasi_results.h  select_ssl.h  torrent_map.h  torrent_parser.h  tree_container.h  url_scheduler.h  url_table.h
src/: .curl_container.cpp.swp  .curl_container.h.swp  .errlib.cpp.swp  .homura.cpp.swp  .main.cpp.swp  .nyaasi_extractor.cpp.swm  .nyaasi_extractor.cpp.swn  .nyaasi_extractor.cpp.swp  .nyaasi_parser.cpp.swp  .torrent_parser.cpp.swp  .tree_container.cpp.swp  .tree_container.h.swp  .url_scheduler.cpp.swp  .url_table.cpp.swp  curl_container.cpp  curl_container.h  curl_object.cpp  curl_object.h  daemon_main.cpp  errlib.cpp  errlib.h  homura.c  homura.cpp  homura.h  leveldb_container.cpp  magnet_table.cpp  magnet_table.h  main.cpp  nyaasi_extractor.cpp  nyaasi_parser.cpp  nyaasi_results.cpp  out  select_ssl.h  snippet  testmodule.cpp  torrent_parser.cpp  tree_container.cpp  tree_container.h  url_scheduler.cpp  url_table.cpp  (+1 more)
src/src/: out  run
